// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio matches snapshot for inline: inline mount 1`] = `
.emotion-0 {
  position: absolute;
  cursor: pointer;
  left: 0;
  top: 0;
  width: 38px;
  height: 38px;
  z-index: 1;
  margin: 0;
  zoom: 1;
  opacity: 0;
}

.emotion-0 [disabled] {
  cursor: auto;
}

.emotion-0 [disabled] + span {
  opacity: .4;
  cursor: auto;
  pointer-events: none;
}

.emotion-0:checked + span::after {
  opacity: 1;
}

.emotion-0:focus + span::before {
  box-shadow: 0 0 0 4px #ffbf47;
}

.emotion-1 {
  font-family: "nta",Arial,sans-serif;
  font-weight: 400;
  text-transform: none;
  font-size: 16px;
  line-height: 1.25;
  cursor: pointer;
  padding: 8px 10px 9px 12px;
  display: block;
}

.emotion-1:before {
  content: '';
  box-sizing: border-box;
  position: absolute;
  top: 0;
  left: 0;
  width: 2.10526em;
  height: 2.10526em;
  border: 2px solid black;
  border-radius: 50%;
  background: transparent;
}

.emotion-1:after {
  content: '';
  position: absolute;
  top: 0.52632em;
  left: 0.52632em;
  width: 0;
  height: 0;
  border: 0.52632em solid;
  border-radius: 50%;
  opacity: 0;
}

.emotion-3 {
  display: block;
  position: relative;
  padding: 0 0 0 38px;
  float: left;
  clear: none;
  margin-right: 30px;
}

.glamor-2,
[data-glamor-2] {
  margin-bottom: 10px;
}

@media only screen and (min-width: 641px) {
  .glamor-2,
  [data-glamor-2] {
    margin-bottom: 10px;
  }
}

<glamorous(Radio)
  inline={true}
  name="example"
>
  <Radio
    className="glamor-2"
    inline={true}
    name="example"
  >
    <Styled(label)
      className="glamor-2"
      inline={true}
    >
      <label
        className="glamor-2 glamor-3"
      >
        <Styled(input)
          name="example"
          type="radio"
        >
          <input
            className="glamor-0"
            name="example"
            type="radio"
          />
        </Styled(input)>
        <Styled(span)>
          <span
            className="glamor-1"
          >
            example
          </span>
        </Styled(span)>
      </label>
    </Styled(label)>
  </Radio>
</glamorous(Radio)>
`;

exports[`Radio matches snapshot: standard mount 1`] = `
.emotion-3 {
  display: block;
  position: relative;
  padding: 0 0 0 38px;
  margin-right: 0px;
}

.emotion-0 {
  position: absolute;
  cursor: pointer;
  left: 0;
  top: 0;
  width: 38px;
  height: 38px;
  z-index: 1;
  margin: 0;
  zoom: 1;
  opacity: 0;
}

.emotion-0 [disabled] {
  cursor: auto;
}

.emotion-0 [disabled] + span {
  opacity: .4;
  cursor: auto;
  pointer-events: none;
}

.emotion-0:checked + span::after {
  opacity: 1;
}

.emotion-0:focus + span::before {
  box-shadow: 0 0 0 4px #ffbf47;
}

.emotion-1 {
  font-family: "nta",Arial,sans-serif;
  font-weight: 400;
  text-transform: none;
  font-size: 16px;
  line-height: 1.25;
  cursor: pointer;
  padding: 8px 10px 9px 12px;
  display: block;
}

.emotion-1:before {
  content: '';
  box-sizing: border-box;
  position: absolute;
  top: 0;
  left: 0;
  width: 2.10526em;
  height: 2.10526em;
  border: 2px solid black;
  border-radius: 50%;
  background: transparent;
}

.emotion-1:after {
  content: '';
  position: absolute;
  top: 0.52632em;
  left: 0.52632em;
  width: 0;
  height: 0;
  border: 0.52632em solid;
  border-radius: 50%;
  opacity: 0;
}

.glamor-2,
[data-glamor-2] {
  margin-bottom: 10px;
}

@media only screen and (min-width: 641px) {
  .glamor-2,
  [data-glamor-2] {
    margin-bottom: 10px;
  }
}

<glamorous(Radio)
  name="example"
>
  <Radio
    className="glamor-2"
    name="example"
  >
    <Styled(label)
      className="glamor-2"
    >
      <label
        className="glamor-2 glamor-3"
      >
        <Styled(input)
          name="example"
          type="radio"
        >
          <input
            className="glamor-0"
            name="example"
            type="radio"
          />
        </Styled(input)>
        <Styled(span)>
          <span
            className="glamor-1"
          >
            example
          </span>
        </Styled(span)>
      </label>
    </Styled(label)>
  </Radio>
</glamorous(Radio)>
`;
